<resources>
    <string name="app_name">Wedding Planner</string>
    <string name="start_fragment_name">Dashboard</string>
    <string name="home">HOME</string>
    <string name="hotels">HOTELS</string>
    <string name="plan">PLAN</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_fragment_name">Hotels</string>
</resources>